Add basic typekit embed for cocon font

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -13,11 +13,13 @@
 	<link rel="stylesheet" href="../stylesheets/global.css" media="all">
 
 	<script src="../javascripts/modernizr.js"></script>
-	
+	<script src="//use.typekit.net/exr4pcg.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
+
 </head>
 
 <body>
-	
+
 <header class="alternative">
 
 	<nav id="primary">
@@ -37,10 +39,10 @@
 			<li class="link-signin"><a href="#">Log In</a></li>
 		</ul>
 	</nav>
-	
+
 	<nav id="support" class="hidden">
 		<ul>
-			<li><strong>Help &amp; Support</strong></li>	
+			<li><strong>Help &amp; Support</strong></li>
 			<li><a href="http://support.beanstalkapp.com/">Articles &amp; FAQ <span>Search most popular questions.</span></a></li>
 			<li><a href="api.html">API Documentation <span>Learn about our API and tools.</span></a></li>
 			<li><a href="http://status.beanstalkapp.com/">System Status <span>Check our status and uptime.</span></a></li>
@@ -54,9 +56,9 @@
 			<h1><a href="home.html">Beanstalk</a></h1>
 		</hgroup>
 	</div>
-	
+
 	<b class="cl"></b><b class="cr"></b>
-	
+
 </header>
 
 <div id="pricing-new">
@@ -199,7 +201,7 @@
 					<li class="no-bullet"><i>&hellip;and much more</i></li>
 				</ul>
 			</div>
-			
+
 		</div>
 	</div>
 
@@ -233,7 +235,7 @@
 					<p>We have a free account for independents offering 1 user and 1 repository. No credit card is required. If you are testing with a team we recommend the full trial which allows inviting unlimited users.</p>
 
 				</div>
-				
+
 				<div class="column right">
 
 					<h2>Do you offer more storage?</h2>
@@ -245,7 +247,7 @@
 					<h2>Can I pay annually?</h2>
 					<p>Yes. You can make one time payments to cover six months, one year or more, making it ideal for expense reports.</p>
 				</div>
-				
+
 			</section>
 
 		</div>
