Strip plan layout style declarations

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -68,7 +68,7 @@
 			<p class="referral-notice hidden"><strong>Nice! You have a 10% rewards program discount. Choose a plan to get started.</strong></p>
 
 			<hgroup class="page-title">
-				<h1>Free for the first two weeks</h1>
+				<h1><strong>Free</strong> for the first two weeks</h1>
 				<h2>No Contracts. Upgrade or downgrade any time.</h2>
 			</hgroup>
 
