Add free/tryout plan to markup

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -82,7 +82,19 @@
 
 				<div class="plans-personal-wrap">
 
-					<div class="plan plan-personal plan--shadowed">
+					<div class="plan plans-tryout">
+						<h2 class="plan-name"><span class="free">Free</span></h2>
+						<p  class="plan-price"><strong>Free</strong></p>
+						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Sign up</a></div>
+						<ul class="plan-includes">
+							<li><strong>100 MB</strong> of storage</li>
+							<li><strong>1</strong> repository</li>
+							<li><strong>1</strong> user</li>
+							<li>No credit card required.</li>
+						</ul>
+					</div>
+
+					<div class="plan plan-personal">
 						<h2 class="plan-name"><span class="bronze">Bronze</span></h2>
 						<p  class="plan-price"><strong>$15</strong>/month</p>
 						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-grey">Sign up</a></div>
@@ -132,7 +144,7 @@
 						</ul>
 					</div>
 
-					<div class="plan plan--shadowed">
+					<div class="plan">
 						<h2 class="plan-name"><span class="platinum">Platinum</span></h2>
 						<p  class="plan-price"><strong>$100</strong>/month</p>
 						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-purple">Sign up</a></div>
@@ -144,7 +156,7 @@
 						</ul>
 					</div>
 
-					<div class="plan plan--shadowed">
+					<div class="plan">
 						<h2 class="plan-name"><span class="diamond"><i></i>Diamond</span></h2>
 						<p  class="plan-price"><strong>$200</strong>/month</p>
 						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-purple">Sign up</a></div>
@@ -168,10 +180,6 @@
 						</ul>
 					</div>
 
-				</div>
-
-				<div class="plans-tryout">
-					<p>Are you an independent? We have a <a href="https://signup.beanstalkapp.com/account/new">Free account</a> for 1 user and 1 repository, with 100MB of storage.<br />No credit card required.</p>
 				</div>
 
 				<i class="i-leaf"></i>
