Remove message from personal plans

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -74,13 +74,13 @@
 
 			<section class="plans-lineup">
 
-				<h1 class="plans-group plans-personal h-rule t-grey">
-					<span class="hr"></span>
-					<span class="hr-name">Built for freelancers and start ups</span>
-					<span class="hr"></span>
-				</h1>
+				<div class="plans plans-personal">
 
-				<div class="plans-personal-wrap">
+					<h1 class="plans-group h-rule">
+						<span class="hr"></span>
+						<span class="hr-name">Built for freelancers and start ups</span>
+						<span class="hr"></span>
+					</h1>
 
 					<div class="plan plans-tryout">
 						<h2 class="plan-name"><span class="free">Free</span></h2>
@@ -118,19 +118,15 @@
 						</ul>
 					</div>
 
-					<div class="plans-message centered">
-						<p>Includes all standard features.</p>
-					</div>
-
 				</div>
 
-				<h1 class="plans-group plans-business h-rule t-purple">
-					<span class="hr"></span>
-					<span class="hr-name">Built for businesses and enterprise</span>
-					<span class="hr"></span>
-				</h1>
+				<div class="plans plans-business">
 
-				<div class="plans-business-wrap">
+					<h1 class="plans-group h-rule">
+						<span class="hr"></span>
+						<span class="hr-name">Built for businesses and enterprise</span>
+						<span class="hr"></span>
+					</h1>
 
 					<div class="plan">
 						<h2 class="plan-name"><span class="gold">Gold</span></h2>
