Move business plan features markup

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -68,7 +68,7 @@
 			<p class="referral-notice hidden"><strong>Nice! You have a 10% rewards program discount. Choose a plan to get started.</strong></p>
 
 			<hgroup class="page-title">
-				<h1><strong>Free</strong> for the first two weeks</h1>
+				<h1>Free for the first two weeks</h1>
 				<h2>No Contracts. Upgrade or downgrade any time.</h2>
 			</hgroup>
 
@@ -165,17 +165,6 @@
 						<p class="link-custom-plans"><a href="#faq">Need more?</a></p>
 					</div>
 
-					<div class="plans-message">
-						<p>Includes all standard features, plus:</p>
-						<ul class="plan-extra">
-							<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
-							<li><strong>Priority Support:</strong>  Get your questions answered first</li>
-							<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
-							<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
-							<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
-						</ul>
-					</div>
-
 				</div>
 
 				<i class="i-leaf"></i>
@@ -190,7 +179,7 @@
 					<span class="hr"></span>
 				</h2>
 
-				<ul>
+				<ul class="plan-standard">
 					<li>Subversion and Git</li>
 					<li>Repository browsing, diffs, blame</li>
 					<li>Revision history and log</li>
@@ -205,6 +194,20 @@
 					<li class="no-bullet"><i>&hellip;and much more</i></li>
 				</ul>
 			</div>
+
+			<h2 class="h-rule t-grey">
+				<span class="hr"></span>
+				<span class="hr-name">Professional features:</span>
+				<span class="hr"></span>
+			</h2>
+
+			<ul class="plan-extra">
+				<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
+				<li><strong>Priority Support:</strong>  Get your questions answered first</li>
+				<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
+				<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
+				<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
+			</ul>
 
 		</div>
 	</div>
