--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -82,40 +82,46 @@
 						<span class="hr"></span>
 					</h1>
 
-					<div class="plan plans-tryout">
-						<h2 class="plan-name"><span class="free">Free</span></h2>
-						<p  class="plan-price"><strong>Free</strong></p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>100 MB</strong> of storage</li>
-							<li><strong>1</strong> repository</li>
-							<li><strong>1</strong> user</li>
-							<li>No credit card required.</li>
-						</ul>
+					<div class="plan-wrap">
+						<div class="plan plans-tryout">
+							<h2 class="plan-name"><span class="free">Free</span></h2>
+							<p  class="plan-price"><strong>Free</strong></p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>100 MB</strong> of storage</li>
+								<li><strong>1</strong> repository</li>
+								<li><strong>1</strong> user</li>
+								<li>No credit card required.</li>
+							</ul>
+						</div>
 					</div>
 
-					<div class="plan plan-personal">
-						<h2 class="plan-name"><span class="bronze">Bronze</span></h2>
-						<p  class="plan-price"><strong>$15</strong>/month</p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-grey">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>3 GB</strong> of storage</li>
-							<li><strong>10</strong> repositories</li>
-							<li><strong>5</strong> users</li>
-							<li><strong>3</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
-						</ul>
+					<div class="plan-wrap">
+						<div class="plan plan-personal">
+							<h2 class="plan-name"><span class="bronze">Bronze</span></h2>
+							<p  class="plan-price"><strong>$15</strong>/month</p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-grey">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>3 GB</strong> of storage</li>
+								<li><strong>10</strong> repositories</li>
+								<li><strong>5</strong> users</li>
+								<li><strong>3</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
+							</ul>
+						</div>
 					</div>
 
-					<div class="plan plan-personal">
-						<h2 class="plan-name"><span class="silver">Silver</span></h2>
-						<p  class="plan-price"><strong>$25</strong>/month</p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Silver" class="square-button t-grey">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>6 GB</strong> of storage</li>
-							<li><strong>25</strong> repositories</li>
-							<li><strong>20</strong> users</li>
-							<li><strong>5</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
-						</ul>
+					<div class="plan-wrap">
+						<div class="plan plan-personal">
+							<h2 class="plan-name"><span class="silver">Silver</span></h2>
+							<p  class="plan-price"><strong>$25</strong>/month</p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Silver" class="square-button t-grey">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>6 GB</strong> of storage</li>
+								<li><strong>25</strong> repositories</li>
+								<li><strong>20</strong> users</li>
+								<li><strong>5</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
+							</ul>
+						</div>
 					</div>
 
 				</div>
