Add plan wrappers to business plans

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -134,41 +134,47 @@
 						<span class="hr"></span>
 					</h1>
 
-					<div class="plan">
-						<h2 class="plan-name"><span class="gold">Gold</span></h2>
-						<p  class="plan-price"><strong>$50</strong>/month</p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-purple">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>12 GB</strong> of storage</li>
-							<li><strong>50</strong> repositories</li>
-							<li><strong>40</strong> users</li>
-							<li><strong>10</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
-						</ul>
+					<div class="plan-wrap">
+						<div class="plan">
+							<h2 class="plan-name"><span class="gold">Gold</span></h2>
+							<p  class="plan-price"><strong>$50</strong>/month</p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-purple">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>12 GB</strong> of storage</li>
+								<li><strong>50</strong> repositories</li>
+								<li><strong>40</strong> users</li>
+								<li><strong>10</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
+							</ul>
+						</div>
 					</div>
 
-					<div class="plan">
-						<h2 class="plan-name"><span class="platinum">Platinum</span></h2>
-						<p  class="plan-price"><strong>$100</strong>/month</p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-purple">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>24 GB</strong> of storage</li>
-							<li><strong>120</strong> repositories</li>
-							<li><strong>100</strong> users</li>
-							<li><strong>20</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
-						</ul>
+					<div class="plan-wrap">
+						<div class="plan">
+							<h2 class="plan-name"><span class="platinum">Platinum</span></h2>
+							<p  class="plan-price"><strong>$100</strong>/month</p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-purple">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>24 GB</strong> of storage</li>
+								<li><strong>120</strong> repositories</li>
+								<li><strong>100</strong> users</li>
+								<li><strong>20</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
+							</ul>
+						</div>
 					</div>
 
-					<div class="plan">
-						<h2 class="plan-name"><span class="diamond"><i></i>Diamond</span></h2>
-						<p  class="plan-price"><strong>$200</strong>/month</p>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-purple">Sign up</a></div>
-						<ul class="plan-includes">
-							<li><strong>60 GB</strong> of storage</li>
-							<li><strong>300</strong> repositories</li>
-							<li><strong>200</strong> users</li>
-							<li><strong>40</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
-						</ul>
-						<p class="link-custom-plans"><a href="#faq">Need more?</a></p>
+					<div class="plan-wrap">
+						<div class="plan">
+							<h2 class="plan-name"><span class="diamond"><i></i>Diamond</span></h2>
+							<p  class="plan-price"><strong>$200</strong>/month</p>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-purple">Sign up</a></div>
+							<ul class="plan-includes">
+								<li><strong>60 GB</strong> of storage</li>
+								<li><strong>300</strong> repositories</li>
+								<li><strong>200</strong> users</li>
+								<li><strong>40</strong> <abbr title="Deployment servers per repository">servers<span class="slash">/</span>repository</abbr></li>
+							</ul>
+							<p class="link-custom-plans"><a href="#faq">Need more?</a></p>
+						</div>
 					</div>
 
 				</div>
