Add title class to plan headers

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -76,7 +76,7 @@
 
 				<div class="plans plans-personal">
 
-					<h1 class="plans-group h-rule">
+					<h1 class="plans-group h-rule t-grey">
 						<span class="hr"></span>
 						<span class="hr-name">Built for freelancers and start ups</span>
 						<span class="hr"></span>
@@ -128,7 +128,7 @@
 
 				<div class="plans plans-business">
 
-					<h1 class="plans-group h-rule">
+					<h1 class="plans-group h-rule t-grey">
 						<span class="hr"></span>
 						<span class="hr-name">Built for businesses and enterprise</span>
 						<span class="hr"></span>
