Style header with content bleed

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -57,20 +57,16 @@
 		</hgroup>
 	</div>
 
-	<b class="cl"></b><b class="cr"></b>
-
 </header>
 
 <div id="pricing-new">
-	<div class="page">
+	<hgroup class="plans-head">
+		<h1>Free for the first two weeks!</h1>
+		<h2>No Contracts. Upgrade or downgrade any time.</h2>
+	</hgroup>
+	<div class="page top">
 		<div class="container">
-
 			<p class="referral-notice hidden"><strong>Nice! You have a 10% rewards program discount. Choose a plan to get started.</strong></p>
-
-			<hgroup class="page-title">
-				<h1>Free for the first two weeks</h1>
-				<h2>No Contracts. Upgrade or downgrade any time.</h2>
-			</hgroup>
 
 			<section class="plans-lineup">
 
