Give plan lists a mimimum height

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -80,7 +80,7 @@
 
 					<div class="plan-wrap">
 						<div class="plan plans-tryout">
-							<h2 class="plan-name"><span class="free">Free</span></h2>
+							<h2 class="plan-name"><span class="free">Starter</span></h2>
 							<p  class="plan-price"><strong>Free</strong></p>
 							<ul class="plan-includes">
 								<li><strong>100 MB</strong> of storage</li>
