Adjust markup and layout of feature lists

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -174,7 +174,7 @@
 
 				</div>
 
-				<p class="link-custom-plans"><a href="#faq">Need more?</a></p>
+				<p class="link-custom-plans">Need more? <a href="contact-us.html">Get in touch</a> and we’ll make it happen.</p>
 
 				<i class="i-leaf"></i>
 
@@ -182,41 +182,47 @@
 
 			<div class="features-list">
 
-				<h2 class="h-rule t-grey">
-					<span class="hr"></span>
-					<span class="hr-name">Standard features included in every plan:</span>
-					<span class="hr"></span>
-				</h2>
+				<div class="plan-standard">
+					<h2 class="h-rule t-grey">
+						<span class="hr"></span>
+						<span class="hr-name">Standard features included in every plan:</span>
+						<span class="hr"></span>
+					</h2>
 
-				<ul class="plan-standard">
-					<li>Subversion and Git</li>
-					<li>Repository browsing, diffs, blame</li>
-					<li>Revision history and log</li>
-					<li>In browser code editing</li>
-					<li>Code review tools</li>
-					<li>Automatic &amp; manual deployments</li>
-					<li>Daily digests and notifications</li>
-					<li>Integration with other services </li>
-					<li>Secure, redundant infrastructure</li>
-					<li>Email &amp; chat support</li>
-					<li>Preview &amp; share HTML and images</li>
-					<li class="no-bullet"><i>&hellip;and much more</i></li>
-				</ul>
+					<ul >
+						<li>Subversion and Git</li>
+						<li>Repository browsing, diffs, blame</li>
+						<li>Revision history and log</li>
+						<li>In browser code editing</li>
+						<li>Code review tools</li>
+						<li>Automatic &amp; manual deployments</li>
+						<li>Daily digests and notifications</li>
+						<li>Integration with other services </li>
+						<li>Secure, redundant infrastructure</li>
+						<li>Email &amp; chat support</li>
+						<li>Preview &amp; share HTML and images</li>
+						<li class="no-bullet"><i>&hellip;and much more</i></li>
+					</ul>
+
+				</div>
+
+				<div class="plan-extra">
+					<h2 class="h-rule t-grey">
+						<span class="hr"></span>
+						<span class="hr-name">Professional features in Gold and above:</span>
+						<span class="hr"></span>
+					</h2>
+
+					<ul>
+						<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
+						<li><strong>Priority Support:</strong>  Get your questions answered first</li>
+						<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
+						<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
+						<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
+					</ul>
+				</div>
+
 			</div>
-
-			<h2 class="h-rule t-grey">
-				<span class="hr"></span>
-				<span class="hr-name">Professional features:</span>
-				<span class="hr"></span>
-			</h2>
-
-			<ul class="plan-extra">
-				<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
-				<li><strong>Priority Support:</strong>  Get your questions answered first</li>
-				<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
-				<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
-				<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
-			</ul>
 
 		</div>
 	</div>
