Use mixin for border-radius on pricing page

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -209,7 +209,7 @@
 				<div class="plan-extra">
 					<h2 class="h-rule t-grey">
 						<span class="hr"></span>
-						<span class="hr-name">Professional features in Gold and above:</span>
+						<span class="hr-name">Enterprise features in Gold and above:</span>
 						<span class="hr"></span>
 					</h2>
 
