Organize pricing style declarations

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -61,7 +61,7 @@
 
 <div id="pricing-new">
 	<hgroup class="plans-head">
-		<h1>Free for the first two weeks!</h1>
+		<h1>All plans <strong>free</strong> for the first two weeks!</h1>
 		<h2>No Contracts. Upgrade or downgrade any time.</h2>
 	</hgroup>
 	<div class="page top">
@@ -72,7 +72,7 @@
 
 				<div class="plans plans-personal">
 
-					<h1 class="plans-group h-rule t-grey">
+					<h1 class="plans-group h-rule t-green">
 						<span class="hr"></span>
 						<span class="hr-name">Built for freelancers and start ups</span>
 						<span class="hr"></span>
@@ -124,7 +124,7 @@
 
 				<div class="plans plans-business">
 
-					<h1 class="plans-group h-rule t-grey">
+					<h1 class="plans-group h-rule t-green">
 						<span class="hr"></span>
 						<span class="hr-name">Built for businesses and enterprise</span>
 						<span class="hr"></span>
