Add prioritized plan layout and style

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -79,19 +79,6 @@
 					</h1>
 
 					<div class="plan-wrap">
-						<div class="plan plans-tryout">
-							<h2 class="plan-name"><span class="free">Starter</span></h2>
-							<p  class="plan-price"><strong>Free</strong></p>
-							<ul class="plan-includes">
-								<li><strong>1</strong> repository</li>
-								<li><strong>1</strong> user</li>
-								<li><strong>100 MB</strong> of storage</li>
-							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Sign up</a></div>
-						</div>
-					</div>
-
-					<div class="plan-wrap">
 						<div class="plan plan-personal">
 							<h2 class="plan-name"><span class="bronze">Bronze</span></h2>
 							<p  class="plan-price"><strong>$15</strong>/month</p>
@@ -104,8 +91,8 @@
 						</div>
 					</div>
 
-					<div class="plan-wrap">
-						<div class="plan plan-personal">
+					<div class="plan-wrap anchor">
+						<div class="plan plan-personal prioritize">
 							<h2 class="plan-name"><span class="silver">Silver</span></h2>
 							<p  class="plan-price"><strong>$25</strong>/month</p>
 							<ul class="plan-includes">
@@ -168,8 +155,18 @@
 
 				</div>
 
-				<p class="link-custom-plans">Need more? <a href="contact-us.html">Get in touch</a> and we’ll make it happen.</p>
-
+				<!-- <div>
+					<div>
+						<h2 class="plan-name"><span class="free">Starter</span></h2>
+						<p  class="plan-price"><strong>Free</strong></p>
+						<ul class="plan-includes">
+							<li><strong>1</strong> repository</li>
+							<li><strong>1</strong> user</li>
+							<li><strong>100 MB</strong> of storage</li>
+						</ul>
+						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Sign up</a></div>
+					</div>
+				</div> -->
 			</section>
 
 			<div class="features-list">
