Increase plan text contrast and change button style

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -61,7 +61,7 @@
 
 <div id="pricing-new">
 	<hgroup class="plans-head">
-		<h1>All plans <strong>free</strong> for the first two weeks!</h1>
+		<h1>All plans are <strong>free</strong> the first two weeks!</h1>
 		<h2>No Contracts. Upgrade or downgrade any time.</h2>
 	</hgroup>
 	<div class="page top">
@@ -87,7 +87,7 @@
 								<li><strong>5</strong> users</li>
 								<li><strong>3 GB</strong> of storage</li>
 							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-grey">Sign up</a></div>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-green">Sign up</a></div>
 						</div>
 					</div>
 
@@ -100,7 +100,7 @@
 								<li><strong>20</strong> users</li>
 								<li><strong>6 GB</strong> of storage</li>
 							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Silver" class="square-button t-grey">Sign up</a></div>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Silver" class="square-button t-green">Sign up</a></div>
 						</div>
 					</div>
 
@@ -123,7 +123,7 @@
 								<li><strong>40</strong> users</li>
 								<li><strong>12 GB</strong> of storage</li>
 							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-purple">Sign up</a></div>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-green">Sign up</a></div>
 						</div>
 					</div>
 
@@ -136,7 +136,7 @@
 								<li><strong>100</strong> users</li>
 								<li><strong>24 GB</strong> of storage</li>
 							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-purple">Sign up</a></div>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-green">Sign up</a></div>
 						</div>
 					</div>
 
@@ -149,7 +149,7 @@
 								<li><strong>200</strong> users</li>
 								<li><strong>60 GB</strong> of storage</li>
 							</ul>
-							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-purple">Sign up</a></div>
+							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-green">Sign up</a></div>
 						</div>
 					</div>
 
