Add enterprise feature item to business plans

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -83,21 +83,21 @@
 							<h2 class="plan-name"><span class="bronze">Bronze</span></h2>
 							<p  class="plan-price"><strong>$15</strong>/month</p>
 							<ul class="plan-includes">
-								<li><strong>10</strong> repositories</li>
 								<li><strong>5</strong> users</li>
+								<li><strong>10</strong> repositories</li>
 								<li><strong>3 GB</strong> of storage</li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Bronze" class="square-button t-green">Select</a></div>
 						</div>
 					</div>
 
-					<div class="plan-wrap anchor">
+					<div class="plan-wrap large">
 						<div class="plan plan-personal prioritize">
 							<h2 class="plan-name"><span class="silver">Silver</span></h2>
 							<p  class="plan-price"><strong>$25</strong>/month</p>
 							<ul class="plan-includes">
-								<li><strong>25</strong> repositories</li>
 								<li><strong>20</strong> users</li>
+								<li><strong>25</strong> repositories</li>
 								<li><strong>6 GB</strong> of storage</li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Silver" class="square-button t-green">Select</a></div>
@@ -119,9 +119,10 @@
 							<h2 class="plan-name"><span class="gold">Gold</span></h2>
 							<p  class="plan-price"><strong>$50</strong>/month</p>
 							<ul class="plan-includes">
-								<li><strong>50</strong> repositories</li>
 								<li><strong>40</strong> users</li>
+								<li><strong>50</strong> repositories</li>
 								<li><strong>12 GB</strong> of storage</li>
+								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-green">Select</a></div>
 						</div>
@@ -132,9 +133,10 @@
 							<h2 class="plan-name"><span class="platinum">Platinum</span></h2>
 							<p  class="plan-price"><strong>$100</strong>/month</p>
 							<ul class="plan-includes">
-								<li><strong>120</strong> repositories</li>
 								<li><strong>100</strong> users</li>
+								<li><strong>120</strong> repositories</li>
 								<li><strong>24 GB</strong> of storage</li>
+								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-green">Select</a></div>
 						</div>
@@ -145,9 +147,10 @@
 							<h2 class="plan-name"><span class="diamond"><i></i>Diamond</span></h2>
 							<p  class="plan-price"><strong>$200</strong>/month</p>
 							<ul class="plan-includes">
-								<li><strong>300</strong> repositories</li>
 								<li><strong>200</strong> users</li>
+								<li><strong>300</strong> repositories</li>
 								<li><strong>60 GB</strong> of storage</li>
+								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-green">Select</a></div>
 						</div>
@@ -171,7 +174,7 @@
 
 			<div class="features-list">
 
-				<div class="plan-standard">
+				<div class="features-standard">
 					<h2 class="h-rule t-grey">
 						<span class="hr"></span>
 						<span class="hr-name">Standard features included in every plan:</span>
@@ -195,10 +198,10 @@
 
 				</div>
 
-				<div class="plan-extra">
+				<div id="extra-features" class="features-extra">
 					<h2 class="h-rule t-grey">
 						<span class="hr"></span>
-						<span class="hr-name">Enterprise features in Gold and above:</span>
+						<span class="hr-name">Enterprise features:</span>
 						<span class="hr"></span>
 					</h2>
 
