Clean up features markup and styling

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -158,62 +158,50 @@
 
 				</div>
 
-				<!-- <div>
-					<div>
-						<h2 class="plan-name"><span class="free">Starter</span></h2>
-						<p  class="plan-price"><strong>Free</strong></p>
-						<ul class="plan-includes">
-							<li><strong>1</strong> repository</li>
-							<li><strong>1</strong> user</li>
-							<li><strong>100 MB</strong> of storage</li>
-						</ul>
-						<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new" class="square-button t-grey">Select</a></div>
-					</div>
-				</div> -->
+				<div class="plans-tryout">
+					<p>Are you an independent? We have a <a href="https://signup.beanstalkapp.com/account/new">Free account</a> for 1 user and 1 repository, with 100MB of storage. No credit card required.</p>
+				</div>
 			</section>
 
-			<div class="features-list">
 
-				<div class="features-standard">
-					<h2 class="h-rule t-grey">
-						<span class="hr"></span>
-						<span class="hr-name">Standard features included in every plan:</span>
-						<span class="hr"></span>
-					</h2>
+			<div class="features features-standard">
+				<h2 class="h-rule t-grey">
+					<span class="hr"></span>
+					<span class="hr-name">Standard features included in every plan:</span>
+					<span class="hr"></span>
+				</h2>
 
-					<ul >
-						<li>Subversion and Git</li>
-						<li>Repository browsing, diffs, blame</li>
-						<li>Revision history and log</li>
-						<li>In browser code editing</li>
-						<li>Code review tools</li>
-						<li>Automatic &amp; manual deployments</li>
-						<li>Daily digests and notifications</li>
-						<li>Integration with other services </li>
-						<li>Secure, redundant infrastructure</li>
-						<li>Email &amp; chat support</li>
-						<li>Preview &amp; share HTML and images</li>
-						<li class="no-bullet"><i>&hellip;and much more</i></li>
-					</ul>
+				<ul >
+					<li>Subversion and Git</li>
+					<li>Repository browsing, diffs, blame</li>
+					<li>Revision history and log</li>
+					<li>In browser code editing</li>
+					<li>Code review tools</li>
+					<li>Automatic &amp; manual deployments</li>
+					<li>Daily digests and notifications</li>
+					<li>Integration with other services </li>
+					<li>Secure, redundant infrastructure</li>
+					<li>Email &amp; chat support</li>
+					<li>Preview &amp; share HTML and images</li>
+					<li class="no-bullet"><i>&hellip;and much more</i></li>
+				</ul>
 
-				</div>
+			</div>
 
-				<div id="extra-features" class="features-extra">
-					<h2 class="h-rule t-grey">
-						<span class="hr"></span>
-						<span class="hr-name">Enterprise features:</span>
-						<span class="hr"></span>
-					</h2>
+			<div id="extra-features" class="features features-extra">
+				<h2 class="h-rule t-grey">
+					<span class="hr"></span>
+					<span class="hr-name">Enterprise features:</span>
+					<span class="hr"></span>
+				</h2>
 
-					<ul>
-						<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
-						<li><strong>Priority Support:</strong>  Get your questions answered first</li>
-						<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
-						<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
-						<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
-					</ul>
-				</div>
-
+				<ul>
+					<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
+					<li><strong>Priority Support:</strong>  Get your questions answered first</li>
+					<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
+					<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
+					<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
+				</ul>
 			</div>
 
 		</div>
