Rearrange additional plan text and features
* Style Enterprise features
* Add FAQ header

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -158,8 +158,9 @@
 
 				</div>
 
-				<div class="plans-tryout">
-					<p>Are you an independent? We have a <a href="https://signup.beanstalkapp.com/account/new">Free account</a> for 1 user and 1 repository, with 100MB of storage. No credit card required.</p>
+				<div class="plans-other">
+					<p><strong>Need less?</strong> We have a <a href="https://signup.beanstalkapp.com/account/new">Free account</a> for 1 user and 1 repository, with 100MB of storage. No credit card required.</p>
+					<p><strong>Need more?</strong> We can increase the storage beyond our highest plan. <a href="contact-us.html">Get in touch</a> and we’ll make it happen.</p>
 				</div>
 			</section>
 
@@ -189,18 +190,14 @@
 			</div>
 
 			<div id="extra-features" class="features features-extra">
-				<h2 class="h-rule t-grey">
-					<span class="hr"></span>
-					<span class="hr-name">Enterprise features:</span>
-					<span class="hr"></span>
-				</h2>
+				<h2>Enterprise features:</h2>
 
 				<ul>
 					<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
 					<li><strong>Priority Support:</strong>  Get your questions answered first</li>
 					<li><strong>Scalable Deployments:</strong> Deploy to multiple servers simultaneously</li>
 					<li><strong>Custom Backups:</strong> Nightly backups to your own AWS S3 account</li>
-					<li><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
+					<li class="full-width"><strong>Peace of mind:</strong> Backed by a <a href="sla.html">100% Uptime SLA</a></li>
 				</ul>
 			</div>
 
@@ -224,6 +221,8 @@
 	<div class="page alternative">
 		<div class="container">
 			<section id="faq">
+
+				<h1>Frequently Asked Questions</h1>
 
 				<div class="column left">
 
