Update extra features title copy

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -190,7 +190,7 @@
 			</div>
 
 			<div id="extra-features" class="features features-extra">
-				<h2>Enterprise features:</h2>
+				<h2>Enterprise features included in Gold, Platinum and Diamond plans:</h2>
 
 				<ul>
 					<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
