Change term Enterprise to Business

--- a/raw-html/pricing.html
+++ b/raw-html/pricing.html
@@ -120,7 +120,7 @@
 								<li><strong>40</strong> users</li>
 								<li><strong>50</strong> repositories</li>
 								<li><strong>12 GB</strong> of storage</li>
-								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
+								<li><a href="#extra-features"><strong>Business features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Gold" class="square-button t-green">Select</a></div>
 						</div>
@@ -134,7 +134,7 @@
 								<li><strong>100</strong> users</li>
 								<li><strong>120</strong> repositories</li>
 								<li><strong>24 GB</strong> of storage</li>
-								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
+								<li><a href="#extra-features"><strong>Business features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Platinum" class="square-button t-green">Select</a></div>
 						</div>
@@ -148,7 +148,7 @@
 								<li><strong>200</strong> users</li>
 								<li><strong>300</strong> repositories</li>
 								<li><strong>60 GB</strong> of storage</li>
-								<li><a href="#extra-features"><strong>Enterprise features</strong></a></li>
+								<li><a href="#extra-features"><strong>Business features</strong></a></li>
 							</ul>
 							<div class="plan-signup"><a href="https://signup.beanstalkapp.com/account/new?plan=Diamond" class="square-button t-green">Select</a></div>
 						</div>
@@ -188,7 +188,7 @@
 			</div>
 
 			<div id="extra-features" class="features features-extra">
-				<h2>Enterprise features included in Gold, Platinum and Diamond plans:</h2>
+				<h2>Business features included in Gold, Platinum and Diamond plans:</h2>
 
 				<ul>
 					<li><strong>Security Tools:</strong> IP restrictions, strong password enforcing</li>
